tp-sample-app/environments/tp-sample-app/overlays/dev/tp-sample-app/deployment.yaml
---
# Source: tp-sample-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-sample-app
  annotations:
    app.openshift.io/vcs-ref: a5c60128443039631d834b2354bce6d0807fa1a5
    app.openshift.io/vcs-uri: https://github.com/client-engineering-tp/tp-sample-app.git
  labels:
    app.kubernetes.io/name: tp-sample-app
    helm.sh/chart: tp-sample-app-1.0.0-rc0.0.6
    app.kubernetes.io/instance: tp-sample-app
    app: tp-sample-app
    app.openshift.io/runtime: js
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: tp-sample-app
      app.kubernetes.io/instance: tp-sample-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tp-sample-app
        app.kubernetes.io/instance: tp-sample-app
    spec:
      containers:
        - name: tp-sample-app
          image: "image-registry.openshift-image-registry.svc:5000/ci/tp-sample-app:0.0.6"
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
#           livenessProbe:
#             httpGet:
#               path: /
#               port: http
#           readinessProbe:
#             httpGet:
#               path: /
#               port: http
          resources:
            null
