tp-sample-app/environments/tp-sample-app/overlays/dev/tp-sample-app/route.yaml
---
# Source: tp-sample-app/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tp-sample-app
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
spec:
  to:
    kind: Service
    name: tp-sample-app
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
